--- a/src/index.html
+++ b/src/index.html
@@ -56,28 +56,84 @@
   </div>
 
   <center class="wrapper">
-    <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color:#FFFFFF" bgcolor="#FFFFFF">
+    <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color:#f5f5f5" bgcolor="#f5f5f5">
       <tr>
         <td width="100%">
           <div class="webkit">
+          
 
-            <!--[if (gte mso 9)|(IE)]>
-              <table width="600" align="center">
+          <!-- Plus, the classic sneakers ...... -->
+
+          <!--[if (gte mso 9)|(IE)]>
+          <table width="600" align="center" >
+          <tr>
+          <td>
+          <![endif]-->
+          <table class="outer" align="center" bgcolor="#ffffff">
               <tr>
-              <td>
-              <![endif]-->
-            <table class="outer" align="center">
-              <tr>
-                <td>
-                  [content goes here]
-                </td>
+                  <td align="center">
+                      <table>
+                          <tr>
+                              <td align="center" style="padding: 30px 40px 5px 40px; font-size:11px; font-weight: 500;">
+                                <a href="#" style="text-decoration: none; color: #333333;">Plus, the classic sneakers that'll save your regular ol' fits.</a>
+                              </td>
+                          </tr>
+                          <tr>
+                            <td align="center" style="padding: 0px 0px 10px 0px; font-size:11px; font-weight: 500;">
+                              <a href="#" style="text-decoration: none;">View this email in your browser</a>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td align="center" style="border-bottom: 1px solid #e5e5e5;"></td>
+                          </tr>
+                      </table>
+                  </td>
               </tr>
-            </table>
-            <!--[if (gte mso 9)|(IE)]>
+          </table>
+          <!--[if (gte mso 9)|(IE)]>
+          </td>
+          </tr>
+          </table>
+          <![endif]-->
+
+
+          <!-- Logo -->
+
+          <!--[if (gte mso 9)|(IE)]>
+          <table width="600" align="center">
+          <tr>
+          <td>
+          <![endif]-->
+          <table class="outer" align="center" bgcolor="#ffffff">
+            <tr>
+              <td class="full-width-image" align="center">
+                <img src="https://i.postimg.cc/JnhNtMYK/logo.png" width="350" alt=""/>
               </td>
-              </tr>
-              </table>
-              <![endif]-->
+            </tr>
+          </table>
+          <!--[if (gte mso 9)|(IE)]>
+          </td>
+          </tr>
+          </table>
+          <![endif]-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+          
 
           </div>
         </td>
