edited the personal note at the footer section

--- a/src/index.html
+++ b/src/index.html
@@ -1867,7 +1867,7 @@ a {
                       <table width="100%" style="border-spacing:0;font-family:'Montserrat', sans-serif;color:#333333;" >
                           <tr>
                               <td align="center" style="font-size:12px;line-height:16px;color:#747475;padding-top:0px;padding-bottom:10px;padding-right:10px;padding-left:10px;" >
-                                Please note that this email is a personal project of mine and not that of GQ.
+                                Please note that this email is a personal project of mine and not that of GQ. All images used belongs to GQ.
                               </td>
                           </tr>
                       </table>
