--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <![endif]-->
 
   <style type="text/css">
-  
-  
+
+
 body {
 	margin: 0 !important;
 	padding: 0;
@@ -256,7 +256,7 @@ a {
 }
 
 @media screen and (min-width: 401px) and (max-width: 620px) {
-	
+
 	.three-column .column {
 		max-width: 33% !important;
 	}
@@ -267,7 +267,7 @@ a {
 
 }
 
-  
+
   </style>
 </head>
 
@@ -358,7 +358,7 @@ a {
           <![endif]-->
             <table class="outer" align="center" bgcolor="#ffffff" style="border-spacing:0;font-family:'Montserrat', sans-serif;color:#333333;Margin:0 auto;width:100%;max-width:600px;" >
               <tr>
-                <td class="full-width-image" align="center" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
+                <td class="full-width-image" align="center" style="padding-top:11px;padding-bottom:11px;padding-right:0;padding-left:0;" >
                   <img src="https://i.postimg.cc/JnhNtMYK/logo.png" width="350" alt="" style="border-width:0;width:100%;max-width:350px;height:auto;" />
                 </td>
               </tr>
@@ -1825,7 +1825,7 @@ a {
         </tr>
         </table>
         <![endif]-->
-        
+
 
           <!-- View our Privacy ...  -->
 
