--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ a {
                   <table width="100%" style="border-spacing:0;font-family:'Montserrat', sans-serif;color:#333333;" >
                     <tr>
                       <td align="center" style="padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
-                        <img src="https://res.cloudinary.com/drnbtvput/image/upload/v1559683192/ar0_hm6d5e.jpg" alt="" style="border-width:0;" >
+                        <img src="https://res.cloudinary.com/drnbtvput/image/upload/v1582557620/hero_ikbqu1.png" alt="" style="border-width:0;" >
                       </td>
                     </tr>
                   </table>
@@ -431,12 +431,12 @@ a {
                   <table width="100%" style="border-spacing:0;font-family:'Montserrat', sans-serif;color:#333333;" >
                     <tr>
                       <td align="center" style="font-size:24px;font-weight:600;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
-                        King Weir
+                        My Time Inside the Troubling Business of Bounty Hunting
                       </td>
                     </tr>
                     <tr>
                       <td align="center" style="color:#737373;font-size:16px;font-weight:400;line-height:20px;padding-top:11px;padding-bottom:11px;padding-right:30px;padding-left:30px;" >
-                        Bob Weir, the indelible guitarist of the Grateful Dead, will not rest.
+                        Inside of the world of bail enforcement agents.
                       </td>
                     </tr>
                   </table>
@@ -471,7 +471,7 @@ a {
                                       <table border="0" cellpadding="0" cellspacing="0" style="Margin:0 auto;border-spacing:0;color:#333333;font-family:'Montserrat', sans-serif;" >
                                         <tr>
                                           <td align="center" bgcolor="#ffffff" width="150" style="-moz-border-radius:4px;-webkit-border-radius:4px;border-radius:4px;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >
-                                            <a href="https://www.gq.com/story/bob-weir-grateful-dead-profile"
+                                            <a href="https://www.gq.com/story/my-time-as-a-bounty-hunter"
                                               class="button_link" style="padding-top:10px;padding-bottom:10px;padding-right:10px;padding-left:10px;width:150;display:block;text-decoration:none;border-width:1px;text-align:center;font-weight:bold;font-size:14px;color:#ff3c36;background-color:transparent;background-image:none;background-repeat:repeat;background-position:1C2C4D;background-attachment:scroll;border-style:solid;border-color:#ff3c36;-moz-border-radius:2px;-webkit-border-radius:2px;border-radius:2px;line-height:17px;text-transform:uppercase;letter-spacing:1px;" >READ
                                               MORE</a>
                                           </td>
